--- a/customers.html
+++ b/customers.html
@@ -15,6 +15,25 @@
     <link rel="stylesheet" href="customers.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
+    <header class="main-header">
+    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+        <button id="darkModeToggle" onclick="toggleDarkMode()">
+            <i class="fas fa-circle-half-stroke"></i>
+        </button>
+        <div>
+            <button onclick="setLanguage('en')">
+                <i class="fas fa-language"></i> English
+            </button>
+            <button onclick="setLanguage('ar')">
+                <i class="fas fa-globe"></i> العربية
+            </button>
+        </div>
+    </div>
+    <h1>
+        <i class="fas fa-microscope"></i>
+        <span data-key="LIMS Control Panel">LIMS Control Panel</span>
+    </h1>
+</header>
 <body>
     <nav class="main-menu">
     <button onclick="window.location.href = 'index.html'"><i class="fas fa-layer-group"></i> <span data-key="General">General</span></button>
