--- a/project-files.html
+++ b/project-files.html
@@ -11,6 +11,25 @@
     <link rel="stylesheet" href="project-files.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+      <header class="main-header">
+    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+        <button id="darkModeToggle" onclick="toggleDarkMode()">
+            <i class="fas fa-circle-half-stroke"></i>
+        </button>
+        <div>
+            <button onclick="setLanguage('en')">
+                <i class="fas fa-language"></i> English
+            </button>
+            <button onclick="setLanguage('ar')">
+                <i class="fas fa-globe"></i> العربية
+            </button>
+        </div>
+    </div>
+    <h1>
+        <i class="fas fa-microscope"></i>
+        <span data-key="LIMS Control Panel">LIMS Control Panel</span>
+    </h1>
+</header>
 </head>
 <body>
        <nav class="main-menu">
