--- a/quotation.html
+++ b/quotation.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIMS Control Panel</title>
+    <title data-key="Projects">Projects Management</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="darkmode.css" />
-    <link rel="stylesheet" href="quotation.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
-    <!-- NEW: FixedColumns CSS for fixed headers -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.3.0/css/fixedColumns.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css">
 
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="darkmode.css" />
+    <link rel="stylesheet" href="projects.css" />
+    <link rel="stylesheet" href="index.css" />
+      <header class="main-header">
+    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+        <button id="darkModeToggle" onclick="toggleDarkMode()">
+            <i class="fas fa-circle-half-stroke"></i>
+        </button>
+        <div>
+            <button onclick="setLanguage('en')">
+                <i class="fas fa-language"></i> English
+            </button>
+            <button onclick="setLanguage('ar')">
+                <i class="fas fa-globe"></i> العربية
+            </button>
+        </div>
+    </div>
+    <h1>
+        <i class="fas fa-microscope"></i>
+        <span data-key="LIMS Control Panel">LIMS Control Panel</span>
+    </h1>
+</header>
 </head>
 <body>
     <section id="customers-section" class="section-content active">
