--- a/quotation.html
+++ b/quotation.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-key="Projects">Projects Management</title>
+    <title data-key="Customers">Customers Management</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -13,9 +12,9 @@
 
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="darkmode.css" />
-    <link rel="stylesheet" href="projects.css" />
+    <link rel="stylesheet" href="customers.css" />
     <link rel="stylesheet" href="index.css" />
-      <header class="main-header">
+    <header class="main-header">
     <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
         <button id="darkModeToggle" onclick="toggleDarkMode()">
             <i class="fas fa-circle-half-stroke"></i>
