--- a/quotation.html
+++ b/quotation.html
@@ -33,6 +33,15 @@
 </header>
 </head>
 <body>
+    <nav class="main-menu">
+    <button onclick="window.location.href = 'index.html'"><i class="fas fa-layer-group"></i> <span data-key="General">General</span></button>
+    <button onclick="window.location.href = 'geotech.html'"><i class="fas fa-mountain"></i> <span data-key="Geotechnical">Geotechnical</span></button>
+    <button onclick="window.location.href = 'calibration.html'"><i class="fas fa-ruler"></i> <span data-key="Calibration">Calibration</span></button>
+    <button onclick="window.location.href = 'fleet.html'"><i class="fas fa-truck-fast"></i> <span data-key="Fleet">Fleet</span></button>
+    <button onclick="window.location.href = 'dashboards.html'"><i class="fas fa-chart-pie"></i> <span data-key="Dashboards">Dashboards</span></button>
+    <button onclick="window.location.href = 'security.html'"><i class="fas fa-user-shield"></i> <span data-key="Security">Security</span></button>
+    <button onclick="window.location.href = 'options.html'"><i class="fas fa-gear"></i> <span data-key="Options">Options</span></button>
+</nav>
     <section id="customers-section" class="section-content active">
         <div class="icon-toolbar">
             <div>
