--- a/quotation.html
+++ b/quotation.html
@@ -42,6 +42,14 @@
     <button onclick="window.location.href = 'security.html'"><i class="fas fa-user-shield"></i> <span data-key="Security">Security</span></button>
     <button onclick="window.location.href = 'options.html'"><i class="fas fa-gear"></i> <span data-key="Options">Options</span></button>
 </nav>
+        <div id="header-placeholder"></div>
+
+    <div class="container">
+        <div id="navbar-placeholder"></div>
+
+        <main class="main-content">
+            <section id="projects-section" class="section-content active">
+                <div class="icon-toolbar">
     <section id="customers-section" class="section-content active">
         <div class="icon-toolbar">
             <div>
