--- a/quotation.html
+++ b/quotation.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="darkmode.css" />
     <link rel="stylesheet" href="quotation.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
     <!-- NEW: FixedColumns CSS for fixed headers -->
     <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.3.0/css/fixedColumns.dataTables.min.css">
     <header class="main-header">
@@ -31,27 +32,12 @@
         <span data-key="LIMS Control Panel">LIMS Control Panel</span>
     </h1>
 </header>
+
 </head>
 <body>
-    <nav class="main-menu">
-    <button onclick="window.location.href = 'index.html'"><i class="fas fa-layer-group"></i> <span data-key="General">General</span></button>
-    <button onclick="window.location.href = 'geotech.html'"><i class="fas fa-mountain"></i> <span data-key="Geotechnical">Geotechnical</span></button>
-    <button onclick="window.location.href = 'calibration.html'"><i class="fas fa-ruler"></i> <span data-key="Calibration">Calibration</span></button>
-    <button onclick="window.location.href = 'fleet.html'"><i class="fas fa-truck-fast"></i> <span data-key="Fleet">Fleet</span></button>
-    <button onclick="window.location.href = 'dashboards.html'"><i class="fas fa-chart-pie"></i> <span data-key="Dashboards">Dashboards</span></button>
-    <button onclick="window.location.href = 'security.html'"><i class="fas fa-user-shield"></i> <span data-key="Security">Security</span></button>
-    <button onclick="window.location.href = 'options.html'"><i class="fas fa-gear"></i> <span data-key="Options">Options</span></button>
-</nav>
-        <div id="header-placeholder"></div>
-
-    <div class="container">
-        <div id="navbar-placeholder"></div>
-
-        <main class="main-content">
-            <section id="projects-section" class="section-content active">
-                <div class="icon-toolbar">
     <section id="customers-section" class="section-content active">
         <div class="icon-toolbar">
+            
             <div>
                 <button title="Add" onclick="openQuotationModal()" class="btn-icon"><i class="fas fa-file"></i></button>
                 <button title="Edit" onclick="openCustomerModal(getSelectedCustomerId())" class="btn-icon"><i class="fas fa-pen"></i></button>
