--- a/quotation.html
+++ b/quotation.html
@@ -44,6 +44,7 @@
     <button onclick="window.location.href = 'security.html'"><i class="fas fa-user-shield"></i> <span data-key="Security">Security</span></button>
     <button onclick="window.location.href = 'options.html'"><i class="fas fa-gear"></i> <span data-key="Options">Options</span></button>
 </nav>
+      <div id="header-placeholder"></div>
     <section id="customers-section" class="section-content active">
         <div class="icon-toolbar">
             
