--- a/quotation.html
+++ b/quotation.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-key="Customers">Customers Management</title>
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-
+    <title>LIMS - Dashboards</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="darkmode.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="quotation.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
-    <!-- NEW: FixedColumns CSS for fixed headers -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.3.0/css/fixedColumns.dataTables.min.css">
-<header class="main-header">
+    <header class="main-header">
     <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
         <button id="darkModeToggle" onclick="toggleDarkMode()">
             <i class="fas fa-circle-half-stroke"></i>
@@ -33,7 +28,7 @@
         <span data-key="LIMS Control Panel">LIMS Control Panel</span>
     </h1>
 </header>
-</head>
+    </head>
 <body>
        <nav class="main-menu">
     <button onclick="window.location.href = 'index.html'"><i class="fas fa-layer-group"></i> <span data-key="General">General</span></button>
