--- a/testing.html
+++ b/testing.html
@@ -3,14 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIMS - Testing</title>
+    <title>LIMS - Dashboards</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="darkmode.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="testing.css" />
-</head>
+    <header class="main-header">
+    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+        <button id="darkModeToggle" onclick="toggleDarkMode()">
+            <i class="fas fa-circle-half-stroke"></i>
+        </button>
+        <div>
+            <button onclick="setLanguage('en')">
+                <i class="fas fa-language"></i> English
+            </button>
+            <button onclick="setLanguage('ar')">
+                <i class="fas fa-globe"></i> العربية
+            </button>
+        </div>
+    </div>
+    <h1>
+        <i class="fas fa-microscope"></i>
+        <span data-key="LIMS Control Panel">LIMS Control Panel</span>
+    </h1>
+</header>
+    </head>
 <body>
+       <nav class="main-menu">
+    <button onclick="window.location.href = 'index.html'"><i class="fas fa-layer-group"></i> <span data-key="General">General</span></button>
+    <button onclick="window.location.href = 'geotech.html'"><i class="fas fa-mountain"></i> <span data-key="Geotechnical">Geotechnical</span></button>
+    <button onclick="window.location.href = 'calibration.html'"><i class="fas fa-ruler"></i> <span data-key="Calibration">Calibration</span></button>
+    <button onclick="window.location.href = 'fleet.html'"><i class="fas fa-truck-fast"></i> <span data-key="Fleet">Fleet</span></button>
+    <button onclick="window.location.href = 'dashboards.html'"><i class="fas fa-chart-pie"></i> <span data-key="Dashboards">Dashboards</span></button>
+    <button onclick="window.location.href = 'security.html'"><i class="fas fa-user-shield"></i> <span data-key="Security">Security</span></button>
+    <button onclick="window.location.href = 'options.html'"><i class="fas fa-gear"></i> <span data-key="Options">Options</span></button>
+</nav>
 
     <section id="testing" class="section-content active">
         <h2>
