--- a/customers.html
+++ b/customers.html
@@ -3,276 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-key="Customers">Customers Management</title>
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <title>LIMS - Customer Files</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" href="/css/General/main.css" />
+    <link rel="stylesheet" href="/css/General/darkmode.css" />
+    <link rel="stylesheet" href="/css/Transactions/Customers/customer-files.css" />
 
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="darkmode.css" />
-    <link rel="stylesheet" href="customers.css" />
-    <link rel="stylesheet" href="index.css" />
-  
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+</head>
+<body>
     <div id="header-placeholder"></div>
 
     <div class="container">
         <div id="navbar-placeholder"></div>
 
         <main class="main-content">
-            <section id="customers-section" class="section-content active">
+            <section id="customer-files-section" class="section-content active">
+                <h2>
+                    <i class="fas fa-folder"></i>
+                    <span data-key="Customer Files">Customer Files</span>
+                    <span id="customer-name-display" class="customer-name-display"></span>
+                </h2>
+
                 <div class="icon-toolbar">
                     <div>
-                        <button title="Add" onclick="openCustomerModal()" class="btn-icon"><i class="fas fa-file"></i></button>
-                        <button title="Edit" onclick="handleEditCustomer()" class="btn-icon"><i class="fas fa-pen"></i></button>
-                        <button title="Delete" onclick="deleteSelectedCustomers()" class="btn-icon"><i class="fas fa-trash"></i></button>
+                        <button title="Upload File" onclick="openUploadModal()" class="btn-icon" >
+                            <i class="fas fa-upload"></i>
+                            </button>
+                        <button title="Delete Selected" onclick="deleteSelectedFiles()" class="btn-icon">
+                            <i class="fas fa-trash"></i>
+                            </button>
+                        <button title="Download Selected as Zip" onclick="downloadSelectedFilesAsZip()" class="btn-icon">
+                            <i class="fas fa-file-archive"></i> 
+                            </button>
+                        <button title="Download Selected" onclick="downloadSelectedFiles()" class="btn-icon">
+                            <i class="fas fa-download"></i>
+                            </button>
                     </div>
                     <div class="icon-separator"></div>
                     <div>
-                        <button title="File Manager" onclick="goToCustomerFiles()" class="btn-icon"><i class="fas fa-folder-open"></i> </button>
-                        <button title="Export to Excel" id="exportCustomersExcelBtn" class="btn-icon"><i class="fa-solid fa-table"></i></button>
-                        <button title="Print" id="printCustomersTableBtn" onclick="printCustomersTable()" class="btn-icon"><i class="fas fa-print"></i></button>
+                        <button title="Select All" onclick="toggleSelectAllFiles(true)" class="btn-icon">
+                            <i class="fas fa-check-double"></i>
+                            </button>
+                        <button title="Deselect All" onclick="toggleSelectAllFiles(false)" class="btn-icon">
+                            <i class="fas fa-times-circle"></i>
+                            </button>
+                    </div>
+                    <div class="search-export-group">
+                        <input type="text" id="fileSearchInput" placeholder="Search files..." data-key="Search files...">
                     </div>
                 </div>
-
-                <div class="table-responsive-container">
-                    <table id="customersTable" class="customer-table display responsive nowrap" data-ignore-lang>
-                        <thead>
-                            <tr>
-                                <th><input type="checkbox" id="selectAllCustomers" onclick="toggleSelectAll(this)" /></th>
-                                <th>Customer ID<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>Name<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>Arabic Name<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>Legal Name<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>Customer Type<br>
-                                    <select class="column-filter">
-                                        <option value="">All</option>
-                                        <option value="Contractor">Contractor</option>
-                                        <option value="Consultant">Consultant</option>
-                                    </select>
-                                </th>
-                                <th>Registration Date<br><input type="date" placeholder="Search..." class="column-filter"></th>
-                                <th>Country<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>City<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>Email<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                <th>Mobile<br><input type="text" placeholder="Search..." class="column-filter"></th>
-                                </tr>
-                        </thead>
-                        <tbody>
-                            </tbody>
-                    </table>
+                
+                <div id="dropZone" class="drop-zone">
+                    <p><i class="fas fa-cloud-upload-alt"></i> Drag and drop files here to upload</p>
                 </div>
+
+
+                <div id="fileIconsContainer" class="file-icons-grid">
+                    <p class="no-files-message" data-key="Loading files...">Loading files...</p>
+                </div>
+
             </section>
-
-            <div id="customerModal" class="modal">
-                <div class="modal-content">
-                    <span class="close" onclick="closeCustomerModal()">&times;</span>
-                    <h2>Customer Details</h2>
-                    <div class="tab-buttons">
-                        <button id="customer-btn" onclick="switchTab('customer')"><i class="fas fa-user"></i> Customer</button>
-                        <button id="contact-btn" onclick="switchTab('contact')"><i class="fas fa-address-book"></i> Contacts</button>
-                    </div>
-
-                    <form id="customerForm" onsubmit="saveCustomer(event)">
-                        <div id="customerTab" class="form-tab-content">
-                            <label for="customerId">Customer ID:</label>
-                            <input type="text" id="customerId" readonly>
-
-                            <label for="customerName">Name: <span class="required-star">*</span></label>
-                            <input type="text" id="customerName" required>
-
-                            <label for="customerArabicName">Arabic Name:</label>
-                            <input type="text" id="customerArabicName">
-
-                            <label for="customerLegalName">Legal Name:</label>
-                            <input type="text" id="customerLegalName">
-
-                            <label for="customerType">Customer Type: <span class="required-star">*</span></label>
-                            <select id="customerType" required>
-                                <option value="">Select Type</option>
-                                <option value="Contractor">Contractor</option>
-                                <option value="Consultant">Consultant</option>
-                            </select>
-
-                            <label for="registrationDate">Registration Date: <span class="required-star">*</span></label>
-                            <input type="date" id="registrationDate" required>
-
-                            <label for="customerCountry">Country:</label>
-                            <input type="text" id="customerCountry">
-
-                            <label for="customerCity">City: <span class="required-star">*</span></label>
-                            <input type="text" id="customerCity" required>
-
-                            <label for="customerEmail">Email:</label>
-                            <input type="email" id="customerEmail"
-                            placeholder="e.g., mail@example.com">
-
-                            <label for="customerPhone">Phone: <span class="required-star">*</span></label>
-                            <input type="tel" id="customerPhone" required
-                            placeholder="e.g., +9665XXXXXXXX"
-                            pattern="\+\d{10,15}"
-                            title="يجب أن يكون الرقم بصيغة دولية (يبدأ بـ +) وبطول 10 إلى 15 رقماً">
-                        </div>
-
-                        <div id="contactTab" class="form-tab-content" style="display: none;">
-                            <p>Contact management features will go here.</p>
-                            <label for="contactName">Contact Person Name:</label>
-                            <input type="text" id="contactName">
-
-                            <label for="contactEmail">Contact Person Email:</label>
-                            <input type="email" id="contactEmail" placeholder="e.g., contact@example.com">
-
-                            <label for="contactPhone">Contact Person Phone:</label>
-                            <input type="tel" id="contactPhone"
-                                        placeholder="e.g., +9665XXXXXXXX"
-                                        pattern="\+\d{10,15}"
-                                        title="يجب أن يكون الرقم بصيغة دولية (يبدأ بـ +) وبطول 10 إلى 15 رقماً">
-                        </div>
-
-                        <div class="form-buttons">
-                            <button type="submit">Save</button>
-                            <button type="button" class="reset" onclick="resetCustomerForm()">Reset</button>
-                            <button type="button" class="cancel" onclick="closeCustomerModal()">Cancel</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-
-            <div id="modal-container"></div>
-            <div id="dynamicContent"></div>
-            <div id="customDialogModal" class="modal">
-                <div class="modal-content">
-                    <span class="close" onclick="closeCustomDialog()">&times;</span>
-                    <h3 id="customDialogTitle"></h3>
-                    <p id="customDialogMessage"></p>
-                    <div class="form-buttons" id="customDialogButtons">
-                    </div>
-                </div>
-            </div>
-            </main>
+        </main>
     </div>
 
-    <script src="jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+    <div id="uploadFileModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeUploadModal()">&times;</span>
+            <h3><span data-key="Upload File for">Upload File for</span> <span id="uploadModalCustomerName"></span></h3>
+            <form id="fileUploadForm" onsubmit="uploadFile(event)">
+                <div class="form-group">
+                    <label for="fileInput"><span data-key="Select File">Select File:</span></label>
+                    <input type="file" id="fileInput" name="fileInput" required>
+                </div>
+                <div class="form-buttons">
+                    <button type="submit" class="form-button" data-key="Upload">Upload</button>
+                    <button type="button" class="form-button cancel" onclick="closeUploadModal()" data-key="Cancel">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div id="modal-container"></div>
+    <div id="dynamicContent"></div>
+    <div id="customDialogModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeCustomDialog()">&times;</span>
+            <h3 id="customDialogTitle"></h3>
+            <p id="customDialogMessage"></p>
+            <div class="form-buttons" id="customDialogButtons"></div>
+        </div>
+    </div>
+
+    <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
-    <script src="main.js" type="text/javascript"></script>
-    <script src="customers.js" type="text/javascript"></script>
-
-    <script>
-        // هذا السكريبت سيضمن تهيئة DataTables ووظائف الصفحة بعد تحميل كل المحتوى الديناميكي
-        $(function(){
-            let headerLoaded = false;
-            let navbarLoaded = false;
-
-            // تحميل header.html
-            $("#header-placeholder").load("/html/General/header.html", function() {
-                headerLoaded = true;
-                console.log("Header loaded.");
-                initializeAfterContentLoad();
-            });
-
-            // تحميل navbar.html
-            $("#navbar-placeholder").load("/html/General/navbar.html", function() {
-                navbarLoaded = true;
-                console.log("Navbar loaded.");
-                initializeAfterContentLoad();
-            });
-
-            // هذه الدالة تُستدعى بعد تحميل الـ header والـ navbar
-            function initializeAfterContentLoad() {
-                if (headerLoaded && navbarLoaded) {
-                    console.log("Header and Navbar loaded. Initializing page elements.");
-
-                    // تطبيق وضع Dark Mode
-                    if (localStorage.getItem('darkMode') === 'enabled') {
-                        document.body.classList.add('dark-mode');
-                    } else {
-                        document.body.classList.remove('dark-mode');
-                    }
-
-                    // تطبيق اللغة المحفوظة
-                    const savedLang = localStorage.getItem('language');
-                    if (savedLang) {
-                        setLanguage(savedLang);
-                    } else {
-                        setLanguage('en'); // اللغة الافتراضية
-                    }
-
-                    // تحديث حالة الأزرار بناءً على اللغة الحالية
-                    const currentLang = localStorage.getItem('language') || 'en';
-                    document.querySelectorAll('.main-header button').forEach(button => {
-                        if (button.onclick && button.onclick.toString().includes(`setLanguage('${currentLang}')`)) {
-                            button.classList.add('active');
-                        } else {
-                            button.classList.remove('active');
-                        }
-                    });
-
-                    // تحديث حالة أزرار القائمة الجانبية
-                    const currentPageFileName = window.location.pathname.split('/').pop();
-                    document.querySelectorAll('.main-menu button').forEach(button => {
-                        if (button.onclick) {
-                            const targetPageMatch = button.onclick.toString().match(/window\.location\.href = '(.+?)'/);
-                            if (targetPageMatch) {
-                                const targetFileName = targetPageMatch[1].split('/').pop();
-                                if (currentPageFileName === targetFileName) {
-                                    button.classList.add('active');
-                                } else {
-                                    button.classList.remove('active');
-                                }
-                            }
-                        }
-                    });
-
-                    // تحديث Placeholder/Title attributes
-                    if (typeof updatePlaceholderAndTitleAttributes === 'function') {
-                        updatePlaceholderAndTitleAttributes();
-                    }
-
-                    // الأهم: تهيئة DataTables هنا بعد التأكد من تحميل كل شيء
-                    if (typeof initializeCustomersTable === 'function') {
-                        console.log("Calling initializeCustomersTable()");
-                        initializeCustomersTable();
-                    } else {
-                        console.error("initializeCustomersTable function is not defined.");
-                    }
-                }
-            }
-        });
-
-        // ربط الأحداث بالأزرار والنماذج باستخدام DOMContentLoaded لضمان وجود العناصر
-        document.addEventListener('DOMContentLoaded', () => {
-
-            // تم تعديل هذا الجزء لربط الأحداث بالـ IDs الجديدة (هذه الأزرار لديها IDs فعلاً)
-            document.getElementById('exportCustomersExcelBtn')?.addEventListener('click', exportCustomersTableToExcel);
-            document.getElementById('printCustomersTableBtn')?.addEventListener('click', printCustomersTable);
-
-
-            document.getElementById('customerModal')?.addEventListener('click', (e) => {
-                if (e.target === document.getElementById('customerModal')) {
-                    closeCustomerModal();
-                }
-            });
-
-            document.getElementById('customer-btn')?.addEventListener('click', () => switchTab('customer'));
-            document.getElementById('contact-btn')?.addEventListener('click', () => switchTab('contact'));
-
-            document.getElementById('selectAllCustomers')?.addEventListener('change', (event) => toggleSelectAll(event.target));
-        });
-
-        // هذه الدوال تحتاج إلى تعريفها في ملف customers.js أو في هذا السكريبت إذا لم تكن موجودة
-        function exportCustomersTableToExcel() {
-            exportTableToExcel('customersTable');
-        }
-
-        function printCustomersTable() {
-            printTable('customersTable');
-        }
-    </script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/js/General/main.js"></script>
+    <script src="/js/Transactions/Customers/customer-files.js"></script>
 </html>
