--- a/project-files.html
+++ b/project-files.html
@@ -6,41 +6,13 @@
     <title>LIMS - Project Files</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="darkmode.css" />
-    <link rel="stylesheet" href="project-files.css" />
+    <link rel="stylesheet" href="/css/General/main.css" />
+    <link rel="stylesheet" href="/css/General/darkmode.css" />
+    <link rel="stylesheet" href="/css/Transactions/Projects/project-files.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-      <header class="main-header">
-    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
-        <button id="darkModeToggle" onclick="toggleDarkMode()">
-            <i class="fas fa-circle-half-stroke"></i>
-        </button>
-        <div>
-            <button onclick="setLanguage('en')">
-                <i class="fas fa-language"></i> English
-            </button>
-            <button onclick="setLanguage('ar')">
-                <i class="fas fa-globe"></i> العربية
-            </button>
-        </div>
-    </div>
-    <h1>
-        <i class="fas fa-microscope"></i>
-        <span data-key="LIMS Control Panel">LIMS Control Panel</span>
-    </h1>
-</header>
 </head>
 <body>
-       <nav class="main-menu">
-    <button onclick="window.location.href = 'index.html'"><i class="fas fa-layer-group"></i> <span data-key="General">General</span></button>
-    <button onclick="window.location.href = 'geotech.html'"><i class="fas fa-mountain"></i> <span data-key="Geotechnical">Geotechnical</span></button>
-    <button onclick="window.location.href = 'calibration.html'"><i class="fas fa-ruler"></i> <span data-key="Calibration">Calibration</span></button>
-    <button onclick="window.location.href = 'fleet.html'"><i class="fas fa-truck-fast"></i> <span data-key="Fleet">Fleet</span></button>
-    <button onclick="window.location.href = 'dashboards.html'"><i class="fas fa-chart-pie"></i> <span data-key="Dashboards">Dashboards</span></button>
-    <button onclick="window.location.href = 'security.html'"><i class="fas fa-user-shield"></i> <span data-key="Security">Security</span></button>
-    <button onclick="window.location.href = 'options.html'"><i class="fas fa-gear"></i> <span data-key="Options">Options</span></button>
-</nav>
     <div id="header-placeholder"></div>
 
     <div class="container">
@@ -129,7 +101,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="main.js"></script>
-    <script src="project-files.js"></script>
+    <script src="/js/General/main.js"></script>
+    <script src="/js/Transactions/Projects/project-files.js"></script>
 </body>
 </html>
