--- a/projects.html
+++ b/projects.html
@@ -494,36 +494,36 @@
         // ربط الأحداث بالأزرار والنماذج
     document.addEventListener('DOMContentLoaded', () => {
         // تهيئة DataTables بمجرد أن يكون DOM جاهزًا
-        if (typeof initializeCustomersTable === 'function') {
-            console.log("DOM content loaded. Initializing customers table.");
-            initializeCustomersTable();
+        if (typeof initializeProjectsTable === 'function') {
+            console.log("DOM content loaded. Initializing projects table.");
+            initializeProjectsTable();
         } else {
-            console.error("initializeCustomersTable function is not defined. Please check customers.js file.");
+            console.error("initializeProjectsTable function is not defined. Please check projects.js file.");
         }
         
         // ... (بقية الكود الخاص بك الذي يربط الأزرار بالأحداث) ...
-        const customerForm = document.getElementById('customerForm');
-        document.getElementById('exportCustomersExcelBtn')?.addEventListener('click', exportCustomersTableToExcel);
-        document.getElementById('printCustomersTableBtn')?.addEventListener('click', printCustomersTable);
-        document.getElementById('exportContactsModalExcelBtn')?.addEventListener('click', () => exportTableToExcel('contactsTable', 'Customer_Contacts'));
-        document.getElementById('printContactsModalTableBtn')?.addEventListener('click', () => printTable('contactsTable', 'Customer_Contacts'));
-        document.getElementById('customerModal')?.addEventListener('click', (e) => {
-            if (e.target === document.getElementById('customerModal')) {
-                closeCustomerModal();
+        const projectForm = document.getElementById('projectForm');
+        document.getElementById('exportProjectsExcelBtn')?.addEventListener('click', exportProjectsTableToExcel);
+        document.getElementById('printProjectsTableBtn')?.addEventListener('click', printProjectsTable);
+        document.getElementById('exportContactsModalExcelBtn')?.addEventListener('click', () => exportTableToExcel('contactsTable', 'project_Contacts'));
+        document.getElementById('printContactsModalTableBtn')?.addEventListener('click', () => printTable('contactsTable', 'project_Contacts'));
+        document.getElementById('projectModal')?.addEventListener('click', (e) => {
+            if (e.target === document.getElementById('projectModal')) {
+                closeProjectModal();
             }
         });
-        document.getElementById('customer-btn')?.addEventListener('click', () => switchTab('customer'));
+        document.getElementById('project-btn')?.addEventListener('click', () => switchTab('project'));
         document.getElementById('contact-btn')?.addEventListener('click', () => switchTab('contact'));
-        document.getElementById('selectAllCustomers')?.addEventListener('change', (event) => toggleSelectAll(event.target));
+        document.getElementById('selectAllProjects')?.addEventListener('change', (event) => toggleSelectAll(event.target));
     });
 
     // الدوال المساعدة (يمكنك نقلها إلى customers.js لتنظيم أفضل)
-    function exportCustomersTableToExcel() {
-        exportTableToExcel('customersTable', 'Customers_Data');
+    function exportProjectsTableToExcel() {
+        exportTableToExcel('projectsTable', 'Projects_Data');
     }
 
-    function printCustomersTable() {
-        printTable('customersTable', 'Customers');
+    function printProjectsTable() {
+        printTable('projectsTable', 'Projects');
     }
     </script>
    
