--- a/registration.html
+++ b/registration.html
@@ -305,7 +305,7 @@
                                 <th>A. Age</th>
                                 <th>Price</th>
                                 <th>QTY</th>
-                                <th>Scheduled @</th>
+                                <th>Scheduled </th>
                                 <th>Rem.</th>
                                 <th>Test Location</th>
                                 <th>Report No.</th>
