--- a/testing.html
+++ b/testing.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 
+   
     <section id="testing" class="section-content active">
         <h2>
             <i class="fas fa-vials"></i>
@@ -46,18 +47,22 @@
                 <i class="fas fa-dna"></i>
                 <span data-key="Insitu Nuclear Density">Insitu Nuclear Density Gauge Method</span>
             </div>
-            <div class="general-card" onclick="window.location.href = 'ngtestingln.html'">
+            <!--
+            <div class="general-card" onclick="window.location.href = 'ngtestingln.html'"> 
                 <i class="fas fa-truck-ramp-box"></i>
                 <span data-key="Pouring Concrete">Pouring of Freshly Concrete Mixes</span>
             </div>
+            -->
             <div class="general-card" onclick="window.location.href = 'daily_testing_program.html'">
                 <i class="fas fa-calendar-alt"></i>
                 <span data-key="Daily Testing Program">Daily Testing Program</span>
             </div>
+            <!--
             <div class="general-card" onclick="window.location.href = 'testing_activities.html'">
                 <i class="fas fa-list-check"></i>
-                <span data-key="Testing Activities">Testing Activities</span>
+                <span data-key="Testing Activities">Testing Activities</span> 
             </div>
+            -->
             <div class="general-card" onclick="window.location.href = 'report_generator.html'">
                 <i class="fas fa-chart-bar"></i>
                 <span data-key="Report Generator">Report Generator</span>
@@ -66,31 +71,34 @@
                 <i class="fas fa-tasks"></i>
                 <span data-key="Activity Schedule">Activity Schedule</span>
             </div>
-            <div class="general-card" onclick="window.location.href = 'disposal_program.html'">
-                <i class="fas fa-box-open"></i>
-                <span data-key="Disposal Program">Disposal Program</span>
-            </div>
-            <div class="general-card" onclick="window.location.href = 'disposal_samples.html'">
-                <i class="fas fa-trash-can"></i>
-                <span data-key="Disposal Samples">Disposal Samples</span>
-            </div>
-        </div>
-
-        <h2 style="margin-top: 30px;">
-            <i class="fas fa-swatchbook"></i>
-            <span data-key="Samples & Templates">Samples & Templates</span>
-        </h2>
-        <div class="general-grid">
-            <div class="general-card" onclick="window.location.href = 'sample_preferences.html'">
-                <i class="fas fa-swatchbook"></i>
-                <span data-key="Sample Preferences">Sample Preferences</span>
-            </div>
-            <div class="general-card" onclick="window.location.href = 'material_sources.html'">
-                <i class="fas fa-sitemap"></i>
-                <span data-key="Material Sources">Material Sources</span>
-            </div>
-        </div>
-    </section>
+            
+            <!--
+            <div class="general-card" onclick="window.location.href = 'disposal_program.html'"> 
+                <i class="fas fa-box-open"></i> 
+                <span data-key="Disposal Program">Disposal Program</span> 
+            </div> 
+            <div class="general-card" onclick="window.location.href = 'disposal_samples.html'"> 
+                <i class="fas fa-trash-can"></i> 
+                <span data-key="Disposal Samples">Disposal Samples</span> 
+            </div> 
+        </div> --> 
+        
+        <!--
+        <h2 style="margin-top: 30px;"> 
+            <i class="fas fa-swatchbook"></i>  
+            <span data-key="Samples & Templates">Samples & Templates</span>  
+        </h2> 
+        <div class="general-grid"> 
+            <div class="general-card" onclick="window.location.href = 'sample_preferences.html'"> 
+                <i class="fas fa-swatchbook"></i> 
+                <span data-key="Sample Preferences">Sample Preferences</span> 
+            </div> 
+            <div class="general-card" onclick="window.location.href = 'material_sources.html'"> 
+                <i class="fas fa-sitemap"></i> 
+                <span data-key="Material Sources">Material Sources</span> 
+            </div> 
+        </div> 
+    </section> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
