--- a/testing.html
+++ b/testing.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-   
     <section id="testing" class="section-content active">
         <h2>
             <i class="fas fa-vials"></i>
@@ -27,7 +26,7 @@
                 <i class="fas fa-truck-monster"></i>
                 <span data-key="Concrete Crushing Orders">Concrete Crushing Orders/Registration</span>
             </div>
-            <div class="general-card" onclick="window.location.href = 'concrete_crushing_testing.html'">
+            <div class="general-card" onclick="window.location.href = 'ngtestingln.html'">
                 <i class="fas fa-clipboard-list"></i>
                 <span data-key="Concrete Crushing Testing">Concrete Crushing Testing/Reporting</span>
             </div>
@@ -35,14 +34,19 @@
                 <i class="fas fa-hammer"></i>
                 <span data-key="Insitu Sand Cone Method">Insitu Sand Cone Method</span>
             </div>
-            <div class="general-card" onclick="window.location.href = 'ngtesting.html'">
-                <i class="fas fa-vial-circle-check"></i>
-                <span data-key="Insitu Soil Density Gauge Method">Insitu Soil Density Gauge Method</span>
-            </div>
-            <div class="general-card" onclick="window.location.href = 'schedule_insitu_nuclear.html'">
-                <i class="fas fa-radiation-alt"></i>
-                <span data-key="Schedule Insitu Nuclear">Schedule Insitu Nuclear Density Gauge Method</span>
-            </div>
+            <!--
+            <div class="general-card" onclick="window.location.href = 'ngtesting.html'"> 
+                <i class="fas fa-vial-circle-check"></i> 
+                <span data-key="Insitu Soil Density Gauge Method">Insitu Soil Density Gauge Method</span> 
+            </div> 
+            --> 
+            <!-- 
+            <div class="general-card" onclick="window.location.href = 'schedule_insitu_nuclear.html'"> 
+                <i class="fas fa-radiation-alt"></i> 
+                <span data-key="Schedule Insitu Nuclear">Schedule Insitu Nuclear Density Gauge Method</span> 
+            </div> 
+            -->
+            
             <div class="general-card" onclick="window.location.href = 'ngtesting.html'">
                 <i class="fas fa-dna"></i>
                 <span data-key="Insitu Nuclear Density">Insitu Nuclear Density Gauge Method</span>
