--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     </h2>
     <div class="general-grid">
       <div class="general-card"> <i class="fas fa-users"></i> <span data-key="Employees">Employees</span></div>
+      <div class="general-card"> <i class="fas fa-building"></i> <span data-key="Department">Department</span> </div>
       <div class="general-card"> <i class="fas fa-flask"></i> <span data-key="Test & Services Category">Test & Services Category</span> </div>
       <div class="general-card"> <i class="fas fa-tools"></i> <span data-key="Equipment">Equipment</span> </div>
       
